--- a/eng/pipelines/common/device-tests.yml
+++ b/eng/pipelines/common/device-tests.yml
@@ -24,16 +24,16 @@ parameters:
       catalyst: /optional/path/to/catalyst.csproj
 
 stages:
-  - stage: android_device_tests_${{ parameters.dotnetVersion.tfm }}
-    displayName: ${{ parameters.dotnetVersion.tfm }} Android Device Tests
+  - stage: android_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
+    displayName: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }} Android Device Tests
     ${{ if ne(parameters.dotnetVersion.dependsOn, '') }}:
       dependsOn:
         - android_device_tests_${{ parameters.dotnetVersion.dependsOn }}
     jobs:
-    - job: android_device_tests_${{ parameters.dotnetVersion.tfm }}
+    - job: android_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
       workspace:
         clean: all
-      displayName: "[${{ parameters.dotnetVersion.tfm }}] Android emulator tests"
+      displayName: "[${{ replace(parameters.dotnetVersion.tfm, '.', '') }}] Android emulator tests"
       pool: ${{ parameters.androidPool }}
       timeoutInMinutes: 60
       strategy:
@@ -46,7 +46,7 @@ stages:
                   ${{ replace(coalesce(project.desc, project.name), ' ', '_') }}_API_${{ api }}:
                     REQUIRED_XCODE: $(DEVICETESTS_REQUIRED_XCODE)
                     PROJECT_PATH: ${{ project.android }}
-                    DOTNET_VERSION: ${{ parameters.dotnetVersion.tfm }}
+                    DOTNET_VERSION: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
                     ${{ if eq(api, 27) }}:
                       DEVICE: android-emulator-32_${{ api }}
                       APIVERSION: ${{ api }}
@@ -69,16 +69,16 @@ stages:
             useArtifacts: ${{ parameters.useArtifacts }}
             poolName: ${{ parameters.androidPool.name }}
 
-  - stage: ios_device_tests_${{ parameters.dotnetVersion.tfm }}
-    displayName: ${{ parameters.dotnetVersion.tfm }} iOS Device Tests
+  - stage: ios_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
+    displayName: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }} iOS Device Tests
     ${{ if ne(parameters.dotnetVersion.dependsOn, '') }}:
       dependsOn:
         - ios_device_tests_${{ parameters.dotnetVersion.dependsOn }}
     jobs:
-    - job: ios_device_tests_${{ parameters.dotnetVersion.tfm }}
+    - job: ios_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
       workspace:
         clean: all
-      displayName: "[${{ parameters.dotnetVersion.tfm }}] iOS simulator tests"
+      displayName: "[${{ replace(parameters.dotnetVersion.tfm, '.', '') }}] iOS simulator tests"
       pool: ${{ parameters.iosPool }}
       timeoutInMinutes: 120
       strategy:
@@ -91,7 +91,7 @@ stages:
                   ${{ replace(coalesce(project.desc, project.name), ' ', '_') }}_V_${{ version }}:
                     REQUIRED_XCODE: $(DEVICETESTS_REQUIRED_XCODE)
                     PROJECT_PATH: ${{ project.ios }}
-                    DOTNET_VERSION: ${{ parameters.dotnetVersion.tfm }}
+                    DOTNET_VERSION: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
                     ${{ if contains(version, 'device') }}:
                       DEVICE: ios-device
                       APIVERSION: ${{ replace(version, 'device-', '') }}
@@ -114,16 +114,16 @@ stages:
             useArtifacts: ${{ parameters.useArtifacts }}
             poolName: 'Azure Pipelines'
 
-  - stage: catalyst_device_tests_${{ parameters.dotnetVersion.tfm }}
-    displayName: ${{ parameters.dotnetVersion.tfm }} macOS Device Tests
+  - stage: catalyst_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
+    displayName: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }} macOS Device Tests
     ${{ if ne(parameters.dotnetVersion.dependsOn, '') }}:
       dependsOn:
         - catalyst_device_tests_${{ parameters.dotnetVersion.dependsOn }}
     jobs:
-    - job: catalyst_device_tests_${{ parameters.dotnetVersion.tfm }}
+    - job: catalyst_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
       workspace:
         clean: all
-      displayName: "${{ parameters.dotnetVersion.tfm }} macOS tests"
+      displayName: "${{ replace(parameters.dotnetVersion.tfm, '.', '') }} macOS tests"
       pool: ${{ parameters.catalystPool }}
       timeoutInMinutes: 240
       strategy:
@@ -136,7 +136,7 @@ stages:
                   ${{ replace(coalesce(project.desc, project.name), ' ', '_') }}_V_${{ version }}:
                     REQUIRED_XCODE: $(DEVICETESTS_REQUIRED_XCODE)
                     PROJECT_PATH: ${{ project.catalyst }}
-                    DOTNET_VERSION: ${{ parameters.dotnetVersion.tfm }}
+                    DOTNET_VERSION: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
                     ${{ if eq(version, 'latest') }}:
                       DEVICE: maccatalyst
                     ${{ else }}:
@@ -158,16 +158,16 @@ stages:
             poolName: 'Azure Pipelines'
 
 
-  - stage: windows_device_tests_${{ parameters.dotnetVersion.tfm }}
-    displayName: ${{ parameters.dotnetVersion.tfm }} Windows Device Tests
+  - stage: windows_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
+    displayName: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }} Windows Device Tests
     ${{ if ne(parameters.dotnetVersion.dependsOn, '') }}:
       dependsOn:
         - windows_device_tests_${{ parameters.dotnetVersion.dependsOn }}
     jobs:
-    - job: windows_device_tests_${{ parameters.dotnetVersion.tfm }}
+    - job: windows_device_tests_${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
       workspace:
         clean: all
-      displayName: "[${{ parameters.dotnetVersion.tfm }}] Windows device tests"
+      displayName: "[${{ replace(parameters.dotnetVersion.tfm, '.', '') }}] Windows device tests"
       pool: ${{ parameters.windowsPool }}
       timeoutInMinutes: 240 # how long to run the job before automatically cancelling
       strategy:
@@ -180,7 +180,7 @@ stages:
                   PROJECT_PATH: ${{ project.windows }}
                   PACKAGE_ID: ${{ project.windowsPackageId }}
                   DEVICE: ${{ version }}
-                  DOTNET_VERSION: ${{ parameters.dotnetVersion.tfm }}
+                  DOTNET_VERSION: ${{ replace(parameters.dotnetVersion.tfm, '.', '') }}
       steps:
         - template: device-tests-steps.yml
           parameters:
