--- a/eng/pipelines/common/device-tests.yml
+++ b/eng/pipelines/common/device-tests.yml
@@ -14,8 +14,8 @@ parameters:
   checkoutDirectory: $(System.DefaultWorkingDirectory)
   useArtifacts: false
   dotnetVersion:
-    - tfm: netX.Y
-      dependsOn: netA.B
+    - tfm: ''
+      dependsOn: ''
   projects:
     - name: name
       desc: Human Description
