--- a/eng/pipelines/device-tests.yml
+++ b/eng/pipelines/device-tests.yml
@@ -87,7 +87,7 @@ parameters:
       name: $(windowsTestsVmPool)
       vmImage: $(windowsTestsVmImage)
 
-  - name: targetFrameworks
+  - name: targetFrameworkVersions
     type: object
     default:
       - tfm: net9.0
@@ -103,7 +103,7 @@ resources:
       ref: refs/heads/main
 
 stages:
-- ${{ each targetFramework in parameters.targetFrameworks }}:
+- ${{ each targetFrameworkVersion in parameters.targetFrameworkVersions }}:
   - template: common/device-tests.yml
     parameters:
       androidPool: ${{ parameters.androidPool }}
@@ -111,7 +111,7 @@ stages:
       catalystPool: ${{ parameters.catalystPool }}
       windowsPool: ${{ parameters.windowsPool }}
       agentPoolAccessToken: $(AgentPoolAccessToken)
-      dotnetVersion: ${{ targetFramework }}
+      targetFrameworkVersion: ${{ targetFrameworkVersion }}
       ${{ if or(parameters.BuildEverything, and(ne(variables['Build.Reason'], 'PullRequest'), eq(variables['System.TeamProject'], 'devdiv'))) }}:
         androidApiLevels: [ 33, 30, 29, 28, 27, 26, 25, 24, 23 ]
         iosVersions: [ 'simulator-17.2']
