--- a/eng/pipelines/device-tests.yml
+++ b/eng/pipelines/device-tests.yml
@@ -92,7 +92,7 @@ parameters:
     default:
       - tfm: net9.0
       - tfm: net8.0
-        dependsOn: net9.0
+        # dependsOn: net9.0
 
 resources:
   repositories:
